# repo-analyser

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh  steps-ive-taken.txt  vercel.json
Assignment Instructions/: README.md  agent.py  config.py  main.py  memory_store.py  requirements.txt  tool_docstrings.py  tooling.py  tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
src/repo_analyser/: __init__.py  agent.py  config.py  github_repos.py  memory_store.py  osv_client.py  repo_dependencies.py  runtime.py  server.py  tavily_search.py  tool_docstrings.py  tooling.py  tools.py
